assets/css/source/_base.scss
/*------ CONTACTO ------ */

#contacto{
    
    .main-wrapper{
        padding-top: 70px;

        h2{
            font-size: $regular;
            font-weight: bold;
        }

        .contact-email{
            color: $grey; 
            text-decoration: underline; 
        }
    }
}

/*------- INFO LEGAL -------- */

#legal{

    .main-wrapper{
        padding-top: 170px;

        h2{
            font-size: $big;
            font-weight: bold;
            padding-bottom: 45px;
            border-bottom: 1px solid $grey;
        }

        h3{
            font-size: 1rem;
            font-weight: bold;
            text-transform: uppercase;
            padding-top: 35px;

            &::before{
                counter-increment: subsection;
                content: counter(subsection) ". ";
            }
        }

        .no-bullets{
            list-style-type: none;
            padding-inline-start: 0;
        }
    }
}

